@@ -10,6 +10,7 @@ XXXX/XX/XX
   - #4494, Fix ST_Simplify output having an outdated bbox (Raúl Marín)
   - #4493, Fix ST_RemoveRepeatedPoints output having an outdated bbox (Raúl Marín)
   - #4495, Fix ST_SnapToGrid output having an outdated bbox (Raúl Marín)
+  - #4506, Remove tolerance in point-in-ring stabline tests (Paul Ramsey)
 
 
 PostGIS 2.4.8
